--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
         <p id="code"></p>
         <button id="copy-btn">Copy Code</button>
     </div>
-    <script src="script1.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
