--- a/index.html
+++ b/index.html
@@ -18,6 +18,31 @@
         <p id="code"></p>
         <button id="copy-btn">Copy Code</button>
     </div>
+    <script type="module">
+      // Import the functions you need from the SDKs you need
+      import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.0/firebase-app.js";
+      import { getFirestore } from "https://www.gstatic.com/firebasejs/10.7.0/firebase-firestore.js";
+      import { getAnalytics } from "https://www.gstatic.com/firebasejs/12.6.0/firebase-analytics.js";
+      // TODO: Add SDKs for Firebase products that you want to use
+      // https://firebase.google.com/docs/web/setup#available-libraries
+      // Your web app's Firebase configuration
+      // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+      const firebaseConfig = {
+        apiKey: "AIzaSyBLiKwKj2eiAMfoWwwphrn7e9IAwDewUDE",
+        authDomain: "accountify-3-a9f6b.firebaseapp.com",
+        projectId: "accountify-3-a9f6b",
+        storageBucket: "accountify-3-a9f6b.appspot.com",
+        messagingSenderId: "108549592928",
+        appId: "1:108549592928:web:b373a492566f1077c13005",
+        measurementId: "G-G2YEW8ZW4X"
+      };
+      // Initialize Firebase
+      const app = initializeApp(firebaseConfig);
+      const db = getFirestore(app);
+      const analytics = getAnalytics(app);
+      // Make db available to non-module scripts
+      window.db = db;
+    </script>
     <script src="script.js"></script>
 </body>
 </html>
