--- a/index.html
+++ b/index.html
@@ -43,6 +43,6 @@
       // Make db available to non-module scripts
       window.db = db;
     </script>
-    <script src="script.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
