--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
     </style>
 </head>
 <body>
-    <div id="message"></div>
+    <div id="message">Please access this page via the shortlink to claim your codee.</div>
     <div id="code-container" style="display: none;">
         <p id="code"></p>
         <button id="copy-btn">Copy Code</button>
     </div>
     <script type="module">
-      // Import the functions you need from the SDKs you need
-      import { initializeApp } from "https://www.gstatic.com/firebasejs/12.6.0/firebase-app.js";
-      import { getFirestore } from "https://www.gstatic.com/firebasejs/12.6.0/firebase-firestore.js";
+      // Import Firebase functions
+      import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.0/firebase-app.js";
+      import { getFirestore, doc, getDoc, setDoc } from "https://www.gstatic.com/firebasejs/10.7.0/firebase-firestore.js";
       // Your web app's Firebase configuration
       const firebaseConfig = {
         apiKey: "AIzaSyBLiKwKj2eiAMfoWwwphrn7e9IAwDewUDE",
@@ -35,8 +35,11 @@
       // Initialize Firebase
       const app = initializeApp(firebaseConfig);
       const db = getFirestore(app);
-      // Make db available to non-module scripts
+      // Make db and functions available globally for non-module script.js
       window.db = db;
+      window.doc = doc;
+      window.getDoc = getDoc;
+      window.setDoc = setDoc;
     </script>
     <script src="script.js"></script>
 </body>
