--- a/index.html
+++ b/index.html
@@ -5,37 +5,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Claim Your Code</title>
     <style>
-        body { font-family: Arial, sans-serif; text-align: center; padding: 50px; background-color: #f0f0f0; }
-        #message { font-size: 24px; color: #333; }
-        #code { font-size: 32px; font-weight: bold; color: #007bff; margin: 20px 0; }
-        button { padding: 10px 20px; background-color: #007bff; color: white; border: none; cursor: pointer; }
-        button:hover { background-color: #0056b3; }
+        body {font-family: Arial, sans-serif; text-align: center; padding: 50px; background:#f0f0f0;}
+        #message {font-size: 24px; color: #333;}
+        #code {font-size: 32px; font-weight: bold; color: #007bff; margin: 20px 0;}
+        button {padding: 10px 20px; background:#007bff; color:white; border:none; cursor:pointer;}
+        button:hover {background:#0056b3;}
     </style>
 </head>
 <body>
-    <div id="message">Please access this page via the shortlink to claim your codee.</div>
-    <div id="code-container" style="display: none;">
+    <div id="message">Loading...</div>
+    <div id="code-container" style="display:none;">
         <p id="code"></p>
         <button id="copy-btn">Copy Code</button>
     </div>
+
+    <!-- Firebase v9+ Modular SDK -->
     <script type="module">
-      // Import Firebase functions
       import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.0/firebase-app.js";
       import { getFirestore, doc, getDoc, setDoc } from "https://www.gstatic.com/firebasejs/10.7.0/firebase-firestore.js";
-      // Your web app's Firebase configuration
+
       const firebaseConfig = {
         apiKey: "AIzaSyBLiKwKj2eiAMfoWwwphrn7e9IAwDewUDE",
         authDomain: "accountify-3-a9f6b.firebaseapp.com",
         projectId: "accountify-3-a9f6b",
-        storageBucket: "accountify-3-a9f6b.firebasestorage.app",
+        storageBucket: "accountify-3-a9f6b.appspot.com",
         messagingSenderId: "108549592928",
-        appId: "1:108549592928:web:b373a492566f1077c13005",
-        measurementId: "G-G2YEW8ZW4X"
+        appId: "1:108549592928:web:b373a492566f1077c13005"
       };
-      // Initialize Firebase
+
       const app = initializeApp(firebaseConfig);
       const db = getFirestore(app);
-      // Make db and functions available globally for non-module script.js
+
       window.db = db;
       window.doc = doc;
       window.getDoc = getDoc;
