--- a/index.html
+++ b/index.html
@@ -3,44 +3,105 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Claim your unique code securely via a shortlink.">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://www.gstatic.com; connect-src 'self' https://firestore.googleapis.com;">
     <title>Claim Your Code</title>
+    <link rel="icon" href="favicon.ico" type="image/x-icon"> <!-- Add your favicon here if available -->
     <style>
-        body { font-family: Arial, sans-serif; text-align: center; padding: 50px; background-color: #f0f0f0; }
-        #message { font-size: 24px; color: #333; }
-        #code { font-size: 32px; font-weight: bold; color: #007bff; margin: 20px 0; }
-        button { padding: 10px 20px; background-color: #007bff; color: white; border: none; cursor: pointer; }
-        button:hover { background-color: #0056b3; }
+        :root {
+            --primary-color: #007bff;
+            --text-color: #333;
+            --bg-color: #f0f0f0;
+            --error-color: #dc3545;
+        }
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            padding: 5vh 2vw;
+            background-color: var(--bg-color);
+            margin: 0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            min-height: 100vh;
+        }
+        main {
+            max-width: 600px;
+            width: 100%;
+        }
+        #message {
+            font-size: 1.5rem; /* 24px equivalent */
+            color: var(--text-color);
+            margin-bottom: 20px;
+            transition: color 0.3s ease;
+        }
+        #message.error {
+            color: var(--error-color);
+        }
+        #code-container {
+            display: none;
+            background: white;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+        }
+        #code {
+            font-size: 2rem; /* 32px equivalent */
+            font-weight: bold;
+            color: var(--primary-color);
+            margin: 20px 0;
+            word-break: break-all; /* Prevent overflow on long codes */
+        }
+        button {
+            padding: 10px 20px;
+            background-color: var(--primary-color);
+            color: white;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            font-size: 1rem;
+            transition: background-color 0.3s ease;
+        }
+        button:hover {
+            background-color: #0056b3;
+        }
+        button:focus {
+            outline: 2px solid var(--primary-color);
+        }
     </style>
 </head>
 <body>
-    <div id="message">Loading...</div>
-    <div id="code-container" style="display: none;">
-        <p id="code"></p>
-        <button id="copy-btn">Copy Code</button>
-    </div>
+    <noscript>
+        <div style="color: red; font-size: 24px;">JavaScript is required to claim your code. Please enable it and reload the page.</div>
+    </noscript>
+    <main role="main">
+        <div id="message" role="alert" aria-live="polite">Processing your request...</div>
+        <div id="code-container">
+            <p id="code"></p>
+            <button id="copy-btn" aria-label="Copy the claimed code to clipboard">Copy Code</button>
+        </div>
+    </main>
     <script type="module">
-      import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.0/firebase-app.js";
-      import { getFirestore, doc, getDoc, setDoc } from "https://www.gstatic.com/firebasejs/10.7.0/firebase-firestore.js";
-
-      const firebaseConfig = {
-        apiKey: "AIzaSyBLiKwKj2eiAMfoWwwphrn7e9IAwDewUDE",
-        authDomain: "accountify-3-a9f6b.firebaseapp.com",
-        projectId: "accountify-3-a9f6b",
-        storageBucket: "accountify-3-a9f6b.appspot.com",
-        messagingSenderId: "108549592928",
-        appId: "1:108549592928:web:b373a492566f1077c13005",
-        measurementId: "G-G2YEW8ZW4X"
-      };
-
-      const app = initializeApp(firebaseConfig);
-      const db = getFirestore(app);
-
-      // Expose for script.js
-      window.db = db;
-      window.doc = doc;
-      window.getDoc = getDoc;
-      window.setDoc = setDoc;
+        // Import the functions you need from the SDKs you need
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/12.6.0/firebase-app.js";
+        import { getFirestore } from "https://www.gstatic.com/firebasejs/12.6.0/firebase-firestore.js";
+        // Your web app's Firebase configuration
+        const firebaseConfig = {
+            apiKey: "AIzaSyBLiKwKj2eiAMfoWwwphrn7e9IAwDewUDE",
+            authDomain: "accountify-3-a9f6b.firebaseapp.com",
+            projectId: "accountify-3-a9f6b",
+            storageBucket: "accountify-3-a9f6b.firebasestorage.app",
+            messagingSenderId: "108549592928",
+            appId: "1:108549592928:web:b373a492566f1077c13005",
+            measurementId: "G-G2YEW8ZW4X"
+        };
+        // Initialize Firebase
+        const app = initializeApp(firebaseConfig);
+        const db = getFirestore(app);
+        // Make db available to non-module scripts
+        window.db = db;
     </script>
-    <script src="script.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
