--- a/index.html
+++ b/index.html
@@ -102,6 +102,6 @@
         // Make db available to non-module scripts
         window.db = db;
     </script>
-    <script src="index.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
