--- a/index.html
+++ b/index.html
@@ -19,12 +19,11 @@
         <p id="code"></p>
         <button id="copy-btn">Copy Code</button>
     </div>
-    <script type="module">
-      // Import Firebase modules
-      import { initializeApp } from "https://www.gstatic.com/firebasejs/12.6.0/firebase-app.js";
-      import { getFirestore, collection, doc, getDoc, setDoc } from "https://www.gstatic.com/firebasejs/12.6.0/firebase-firestore.js";
+    <script src="https://www.gstatic.com/firebasejs/10.7.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.7.0/firebase-firestore.js"></script>
+    <script>
       // Firebase config
-      const firebaseConfig = {
+      var firebaseConfig = {
         apiKey: "AIzaSyBLiKwKj2eiAMfoWwwphrn7e9IAwDewUDE",
         authDomain: "accountify-3-a9f6b.firebaseapp.com",
         projectId: "accountify-3-a9f6b",
@@ -34,9 +33,7 @@
         measurementId: "G-G2YEW8ZW4X"
       };
       // Initialize Firebase
-      const app = initializeApp(firebaseConfig);
-      const db = getFirestore(app);
-      // Now the async function can use db and imported functions
+      firebase.initializeApp(firebaseConfig);
     </script>
     <script src="script.js"></script>
 </body>
