--- a/index.html
+++ b/index.html
@@ -19,11 +19,13 @@
         <p id="code"></p>
         <button id="copy-btn">Copy Code</button>
     </div>
-    <script src="https://www.gstatic.com/firebasejs/10.7.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/10.7.0/firebase-firestore.js"></script>
-    <script>
-      // Firebase config
-      var firebaseConfig = {
+    <script type="module">
+      // Import the functions you need from the SDKs you need
+      import { initializeApp } from "https://www.gstatic.com/firebasejs/12.6.0/firebase-app.js";
+      import { getFirestore, collection, doc, getDoc, setDoc } from "https://www.gstatic.com/firebasejs/12.6.0/firebase-firestore.js";
+      // Your web app's Firebase configuration
+      // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+      const firebaseConfig = {
         apiKey: "AIzaSyBLiKwKj2eiAMfoWwwphrn7e9IAwDewUDE",
         authDomain: "accountify-3-a9f6b.firebaseapp.com",
         projectId: "accountify-3-a9f6b",
@@ -33,7 +35,14 @@
         measurementId: "G-G2YEW8ZW4X"
       };
       // Initialize Firebase
-      firebase.initializeApp(firebaseConfig);
+      const app = initializeApp(firebaseConfig);
+      const db = getFirestore(app);
+      // Make db and functions available to non-module scripts
+      window.db = db;
+      window.collection = collection;
+      window.doc = doc;
+      window.getDoc = getDoc;
+      window.setDoc = setDoc;
     </script>
     <script src="script.js"></script>
 </body>
