--- a/index.html
+++ b/index.html
@@ -1,48 +1,49 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Claim Your Code</title>
-<style>
-body { font-family: Arial, sans-serif; text-align: center; padding: 50px; background-color: #f0f0f0; }
-#message { font-size: 24px; color: #333; }
-#message.error { color: red; }
-#code { font-size: 32px; font-weight: bold; color: #007bff; margin: 20px 0; }
-button { padding: 10px 20px; background-color: #007bff; color: white; border: none; cursor: pointer; }
-button:hover { background-color: #0056b3; }
-</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Claim Your Code</title>
+    <style>
+        body { font-family: Arial, sans-serif; text-align: center; padding: 50px; background-color: #f0f0f0; }
+        #message { font-size: 24px; color: #333; }
+        #message.error { color: red; }
+        #code { font-size: 32px; font-weight: bold; color: #007bff; margin: 20px 0; }
+        button { padding: 10px 20px; background-color: #007bff; color: white; border: none; cursor: pointer; }
+        button:hover { background-color: #0056b3; }
+    </style>
 </head>
 <body>
-<div id="message">Processing your request...</div>
-<div id="code-container" style="display: none;">
-<p id="code"></p>
-<button id="copy-btn">Copy Code</button>
-</div>
-<script type="module">
-// Import the functions you need from the SDKs you need
-import { initializeApp } from "https://www.gstatic.com/firebasejs/12.6.0/firebase-app.js";
-import { getFirestore, collection, doc, getDoc, setDoc } from "https://www.gstatic.com/firebasejs/12.6.0/firebase-firestore.js";
-// Your web app's Firebase configuration
-// For Firebase JS SDK v7.20.0 and later, measurementId is optional
-const firebaseConfig = {
-apiKey: "AIzaSyBLiKwKj2eiAMfoWwwphrn7e9IAwDewUDE",
-authDomain: "accountify-3-a9f6b.firebaseapp.com",
-projectId: "accountify-3-a9f6b",
-storageBucket: "accountify-3-a9f6b.firebasestorage.app",
-messagingSenderId: "108549592928",
-appId: "1:108549592928:web:b373a492566f1077c13005",
-measurementId: "G-G2YEW8ZW4X"
-};
-// Initialize Firebase
-const app = initializeApp(firebaseConfig);
-const db = getFirestore(app);
-// Make db and functions available to non-module scripts
-window.db = db;
-window.collection = collection;
-window.doc = doc;
-window.getDoc = getDoc;
-window.setDoc = setDoc;
-</script>
-<script src="script.js"></script>
+    <div id="message">Processing your request...</div>
+    <div id="code-container" style="display: none;">
+        <p id="code"></p>
+        <button id="copy-btn">Copy Code</button>
+    </div>
+    <script type="module">
+      // Import the functions you need from the SDKs you need
+      import { initializeApp } from "https://www.gstatic.com/firebasejs/12.6.0/firebase-app.js";
+      import { getFirestore, collection, doc, getDoc, setDoc } from "https://www.gstatic.com/firebasejs/12.6.0/firebase-firestore.js";
+      // Your web app's Firebase configuration
+      // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+      const firebaseConfig = {
+        apiKey: "AIzaSyBLiKwKj2eiAMfoWwwphrn7e9IAwDewUDE",
+        authDomain: "accountify-3-a9f6b.firebaseapp.com",
+        projectId: "accountify-3-a9f6b",
+        storageBucket: "accountify-3-a9f6b.firebasestorage.app",
+        messagingSenderId: "108549592928",
+        appId: "1:108549592928:web:b373a492566f1077c13005",
+        measurementId: "G-G2YEW8ZW4X"
+      };
+      // Initialize Firebase
+      const app = initializeApp(firebaseConfig);
+      const db = getFirestore(app);
+      // Make db and functions available to non-module scripts
+      window.db = db;
+      window.collection = collection;
+      window.doc = doc;
+      window.getDoc = getDoc;
+      window.setDoc = setDoc;
+    </script>
+    <script src="script.js"></script>
 </body>
 </html>
